add style for message info

--- a/django_cms_opusplace/static/main.css
+++ b/django_cms_opusplace/static/main.css
@@ -21,8 +21,9 @@ a:hover {
     justify-content: space-between;
     max-width: 1180px;
     margin: 0 auto;
-    padding: 37px 0 0;
+    padding: 37px 20px 0 10px;
     align-items: center;
+    box-sizing: border-box;
 }
 .nav-list {
     display: flex;
@@ -78,7 +79,7 @@ a:hover {
     margin: 40px auto;
     border: 1px solid #e4e4e4;
     border-radius: 5px;
-    padding: 0 25px 20px 25px;
+    padding: 10px 25px 20px 25px;
 }
 .registration-form input[type="text"],
 .registration-form input[type="email"] {
@@ -158,4 +159,61 @@ a:hover {
 }
 .lang-box_info {
     margin-right: 100px;
+}
+.messages {
+    margin: 0;
+    padding: 10px 0;
+    list-style: none;
+    position: relative;
+    max-width: 1180px;
+    margin: 0 auto;
+}
+.messages p {
+    color: #78a627;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 10px;
+    margin: 0;
+}
+.message-holder {
+    background: #ccc;
+    border-radius: 0 0 4px 4px;
+}
+.close {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    right: 10px;
+    top: 20px;
+    font-size: 0;
+    line-height: 0;
+    overflow: hidden;
+    text-indent: -9999px;
+    border: 2px solid #586165;
+    border-radius: 50%;
+}
+.close:hover {
+    cursor: pointer;
+    border-color: #839096;
+}
+ .close::before,
+ .close::after {
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    top: 50%;
+    left: 0;
+    margin-top: -1px;
+    background: #586165;
+}
+.close::before {
+    transform: rotate(45deg);
+}
+.close::after {
+    transform: rotate(-45deg);
+}
+.close:hover::after,
+.close:hover::before {
+    background: #839096;
 }
