add close mesaage info.

--- a/django_cms_opusplace/templates/base.html
+++ b/django_cms_opusplace/templates/base.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="{% static "main.css" %}">
         {% render_block "css" %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body>
         {% if messages %}
@@ -75,5 +76,12 @@
             </footer>
 
         {% render_block "js" %}
+        <script>
+          $(document).ready(function() {
+            $('.close').on('click', function (ev) {
+              $('.message-holder').remove();
+            })
+          })
+        </script>
     </body>
 </html>
