--- a/django_cms_opusplace/templates/base.html
+++ b/django_cms_opusplace/templates/base.html
@@ -16,7 +16,7 @@
             <div class="messages">
                 <span class="close">close</span>
                 {% for message in messages %}
-                <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+                <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|safe }}</p>
                 {% endfor %}
             </div>
         </div>
