--- a/django_cms_opusplace/static/main.css
+++ b/django_cms_opusplace/static/main.css
@@ -1,3 +1,10 @@
+@font-face {
+	font-family: 'OpenSans';
+	src: url('fonts/OpenSans-Regular.woff2') format('woff2');
+	font-weight: normal;
+	font-style: normal;
+}
+
 body {
     margin: 0;
 }
@@ -171,8 +178,7 @@ a:hover {
     margin: 0 auto;
 }
 .messages p {
-    color: #78a627;
-    font-weight: bold;
+    color: #474747;
     font-size: 16px;
     padding: 10px;
     margin: 0;
@@ -191,7 +197,7 @@ a:hover {
     line-height: 0;
     overflow: hidden;
     text-indent: -9999px;
-    border: 2px solid #586165;
+    border: 2px solid rgb(88, 97, 101);
     border-radius: 50%;
 }
 .close:hover {
@@ -218,4 +224,60 @@ a:hover {
 .close:hover::after,
 .close:hover::before {
     background: #839096;
+}
+
+/* new style  */
+.reg-wrapper {
+    padding: 40px 0;
+    margin: 0 auto;
+    max-width: 1180px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.left-side,
+.right-side {
+    flex: 1 1 560px;
+}
+.content-wrapper {
+    position: relative;
+}
+.register-button {
+    position: absolute;
+    top: 26px;
+    left: 50%;
+    transform: translate(-50%,0);
+    font-size: 70px;
+    color: #fff;
+    font-family: OpenSans, Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+}
+.lang-en .register-button {
+    font-size: 35px;
+}
+.register-button:hover {
+    color: rgba(255,255,255,0.6);
+}
+.header-wrapper {
+    flex-direction: row-reverse;
+}
+.message-holder {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(88, 97, 101, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9;
+}
+.popup-holder {
+    width: 320px;
+    background: rgb(250,250,250);
+    padding: 15px;
+    border-bottom: 3px solid #61a60e;
+}
+.popup-holder .close {
+    right: -7px;
+    top: -5px;
 }
