--- a/django_cms_opusplace/templates/base.html
+++ b/django_cms_opusplace/templates/base.html
@@ -28,7 +28,7 @@
 
         {% cms_toolbar %}
             <header class="header">
-                <a href="/zhongguo/" class="logo">
+                <a href="/" class="logo">
                     <img src="{% static "img/logo.png" %}" alt="opusplace">
                 </a>
                 <div class="header-wrapper">
@@ -68,7 +68,7 @@
             </div>
             <footer class="footer">
                 <div class="footer-wrapper">
-                    <a class="logo-footer" href="/zhongguo/">
+                    <a class="logo-footer" href="/">
                         <img src="{% static "img/logo-footer.png" %}" alt="opusplace">
                     </a>
                     <p class="copyright">© 2017 Opusplace AB. All rights reserved.</p>
