--- a/django_cms_opusplace/static/main.css
+++ b/django_cms_opusplace/static/main.css
@@ -7,6 +7,7 @@
 
 body {
     margin: 0;
+    font-family: OpenSans, Arial, Helvetica, sans-serif;
 }
 a {
     text-decoration: none;
@@ -234,6 +235,7 @@ a:hover {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    font-size: 16px;
 }
 .left-side,
 .right-side {
