no italic in forms

--- a/django_cms_opusplace/static/main.css
+++ b/django_cms_opusplace/static/main.css
@@ -237,6 +237,9 @@ a:hover {
     justify-content: space-between;
     font-size: 16px;
 }
+.reg-wrapper input {
+    font-style: normal;
+}
 .left-side,
 .right-side {
     flex: 1 1 560px;
