--- a/django_cms_opusplace/templates/base.html
+++ b/django_cms_opusplace/templates/base.html
@@ -5,7 +5,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>{% block title %}OpuSplase{% endblock title %}</title>
+        <title>{% block title %}Opusplace{% endblock title %}</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="{% static "main.css" %}">
         {% render_block "css" %}
